--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "rustlabs.github.io"
+baseURL = "https://rustlabs.github.io/"
 languageCode = "en-us"
 title = "RustLabs"
 pluralizeListTitles = false
