--- a/hugo.toml
+++ b/hugo.toml
@@ -16,7 +16,7 @@ enableGitInfo = true # N.B. .GitInfo does not currently function with submodule 
     extended = true
     min = "0.100.0"
   [[module.imports]]
-    path = "github.com/colinwilson/lotusdocs"
+    path = "https://github.com/RustLabs/rustlabs.github.io"
     disable = false
   [[module.imports]]
     path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
@@ -55,7 +55,7 @@ darkMode        = true                                # enable dark mode option?
 prism           = true                                # enable syntax highlighting via Prism
 prismTheme      = "lotusdocs"                         # (optional) - Set theme for PrismJS. Options include: lotusdocs (default), solarized-light, twilight, lucario
 #gitinfo
-repoURL         = "https://github.com/sangam14"  # Git repository URL for your site [support for GitHub, GitLab, and BitBucket]
+repoURL         = "https://github.com/RustLabs/rustlabs.github.io"  # Git repository URL for your site [support for GitHub, GitLab, and BitBucket]
 repoBranch      = "release"                           # Name of your Git repository branch
 editPage        = true                                # enable 'Edit this page' feature - default false
 lastMod         = true                                # enable 'Last modified' date on pages - default false
