--- a/hugo.toml
+++ b/hugo.toml
@@ -10,17 +10,15 @@ enableGitInfo = true # N.B. .GitInfo does not currently function with submodule 
   noJSConfigInAssets = true
 
 [module]
-  # uncomment line below for temporary local development of module
-  replacements = "github.com/colinwilson/lotusdocs -> lotusdocs"
-  [module.hugoVersion]
-    extended = true
-    min = "0.100.0"
-  [[module.imports]]
-    path = "github.com/colinwilson/lotusdocs"
-    disable = false
-  [[module.imports]]
-    path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
-    disable = false
+    # uncomment line below for temporary local development of module,
+    # when using a 'theme' as a git submodule or git cloned files
+    replacements = "github.com/colinwilson/lotusdocs -> lotusdocs"
+    [[module.imports]]
+        path = "github.com/colinwilson/lotusdocs"
+        disable = false
+    [[module.imports]]
+        path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
+        disable = false
 
 [markup]
     [markup.tableOfContents]
